--- a/ch3/ch3_ws/src/example_topic_rclcpp/CMakeLists.txt
+++ b/ch3/ch3_ws/src/example_topic_rclcpp/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(example_cpp)
+project(example_topic_rclcpp)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -8,6 +8,7 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -22,13 +23,17 @@ if(BUILD_TESTING)
 endif()
 
 ament_package()
-add_executable(node_01 src/node_01.cpp)
-add_executable(node_03 src/node_03.cpp)
-ament_target_dependencies(node_01 rclcpp)
-ament_target_dependencies(node_03 rclcpp)
+add_executable(topic_publisher_01 src/topic_publisher_01.cpp)
+ament_target_dependencies(topic_publisher_01 rclcpp std_msgs)
+install(TARGETS
+  topic_publisher_01
+  DESTINATION lib/${PROJECT_NAME}
+)
+add_executable(topic_subscribe_01 src/topic_subscribe_01.cpp)
+ament_target_dependencies(topic_subscribe_01 rclcpp std_msgs)
+
 
 install(TARGETS
-  node_01
-  node_03
+topic_subscribe_01
   DESTINATION lib/${PROJECT_NAME}
 )
